<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/main_color"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/edit_recipe_back_iv"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:tint="@color/white" />

        <TextView
            android:layout_marginStart="15dp"
            android:text="@string/edit_recipe"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/background_edit_text"
                android:id="@+id/edit_recipe_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name_hint"
                android:inputType="text" />

            <TextView
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:text="@string/recipe_image_optional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/edit_recipe_image_iv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_food_placeholder"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_marginTop="10dp"
                android:textColor="@color/main_color"
                android:background="@drawable/background_button"
                android:id="@+id/edit_recipe_pick_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients" />

            <EditText
                android:gravity="top|start"
                android:maxLines="6"
                android:minLines="3"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/background_edit_text"
                android:id="@+id/edit_recipe_ingredients_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredients_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps" />

            <EditText
                android:gravity="top|start"
                android:maxLines="6"
                android:minLines="3"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/background_edit_text"
                android:id="@+id/edit_recipe_steps_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_types" />

            <Spinner
                android:id="@+id/edit_recipe_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <Button
                android:textColor="@color/main_color"
                android:background="@drawable/background_button"
                android:layout_marginTop="20dp"
                android:id="@+id/edit_recipe_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_recipe" />

        </LinearLayout>

    </ScrollView>

</LinearLayout> 