<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/main_color"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:contentDescription="@string/image_back_icon"
            android:id="@+id/recipe_detail_back_iv"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:tint="@color/white" />

        <TextView
            android:layout_marginStart="15dp"
            android:text="@string/recipe_details"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:contentDescription="@string/image_edit_icon"
            android:id="@+id/recipe_detail_edit_iv"
            android:src="@drawable/ic_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:tint="@color/white" />

        <ImageView
            android:contentDescription="@string/image_delete_icon"
            android:layout_marginStart="15dp"
            android:id="@+id/recipe_detail_delete_iv"
            android:src="@drawable/ic_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:tint="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/image_recipe_image"
                android:id="@+id/recipe_detail_image_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_food_placeholder" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/recipe_detail_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Recipe name"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Recipe type"
                android:id="@+id/recipe_detail_type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/text_hint"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Ingredients"
                android:id="@+id/recipe_detail_ingredients_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                tools:text="Steps"
                android:id="@+id/recipe_detail_steps_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout> 